<resources>
    <string name="app_name">Firebase App</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="sign_up">sign up</string>
    <string name="or">or</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="verify">verify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_create_your_account">don\'t have an account? Create your account</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="win_certificate">Win Certificate</string>
</resources>